Answering wrap-up quiz

--- a/notebooks/linear_models_regularization.ipynb
+++ b/notebooks/linear_models_regularization.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "576a5e63",
    "metadata": {},
    "source": [
     "# Regularization of linear regression model\n",
@@ -23,6 +24,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f45ba5c",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -35,6 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74693e19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32b9e752",
    "metadata": {},
    "source": [
     "In one of the previous notebook, we showed that linear models could be used\n",
@@ -64,6 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0cce2913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +87,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04b4d9c7",
    "metadata": {},
    "source": [
     "We can compare the mean squared error on the training and testing set to\n",
@@ -91,27 +97,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "566d1857",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_error = -cv_results[\"train_score\"]\n",
     "print(f\"Mean squared error of linear regression model on the train set:\\n\"\n",
-    "      f\"{train_error.mean():.3f} \u00b1 {train_error.std():.3f}\")"
+    "      f\"{train_error.mean():.3f} ± {train_error.std():.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3c43b90d",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_error = -cv_results[\"test_score\"]\n",
     "print(f\"Mean squared error of linear regression model on the test set:\\n\"\n",
-    "      f\"{test_error.mean():.3f} \u00b1 {test_error.std():.3f}\")"
+    "      f\"{test_error.mean():.3f} ± {test_error.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "1c5ac8a6",
    "metadata": {},
    "source": [
     "The score on the training set is much better. This generalization performance\n",
@@ -134,6 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d063ba5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,6 +152,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c0eea27",
    "metadata": {},
    "source": [
     "Now, we can access to the fitted `PolynomialFeatures` to generate the feature\n",
@@ -151,6 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43b94ced",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,6 +173,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c4c43e7",
    "metadata": {},
    "source": [
     "Finally, we can create the dataframe containing all the information."
@@ -169,6 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "07705dac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,6 +194,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f2aab74",
    "metadata": {},
    "source": [
     "Now, let's use a box plot to see the coefficients variations."
@@ -188,6 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2aa1d9b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,6 +216,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7b6494e",
    "metadata": {},
    "source": [
     "We can force the linear regression model to consider all features in a more\n",
@@ -211,6 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c51a2e04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +244,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aad78cf0",
    "metadata": {},
    "source": [
     "The code cell above will generate a couple of warnings because the features\n",
@@ -238,27 +257,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f7ca4467",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_error = -cv_results[\"train_score\"]\n",
     "print(f\"Mean squared error of linear regression model on the train set:\\n\"\n",
-    "      f\"{train_error.mean():.3f} \u00b1 {train_error.std():.3f}\")"
+    "      f\"{train_error.mean():.3f} ± {train_error.std():.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "48d1833c",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_error = -cv_results[\"test_score\"]\n",
     "print(f\"Mean squared error of linear regression model on the test set:\\n\"\n",
-    "      f\"{test_error.mean():.3f} \u00b1 {test_error.std():.3f}\")"
+    "      f\"{test_error.mean():.3f} ± {test_error.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "f1f04862",
    "metadata": {},
    "source": [
     "We see that the training and testing scores are much closer, indicating that\n",
@@ -269,6 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a1ff60de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,6 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cb681ff6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +312,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ace23537",
    "metadata": {},
    "source": [
     "By comparing the magnitude of the weights on this plot compared to the\n",
@@ -334,6 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a4035f01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,27 +376,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8d9ad4d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_error = -cv_results[\"train_score\"]\n",
     "print(f\"Mean squared error of linear regression model on the train set:\\n\"\n",
-    "      f\"{train_error.mean():.3f} \u00b1 {train_error.std():.3f}\")"
+    "      f\"{train_error.mean():.3f} ± {train_error.std():.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c8c4c5ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_error = -cv_results[\"test_score\"]\n",
     "print(f\"Mean squared error of linear regression model on the test set:\\n\"\n",
-    "      f\"{test_error.mean():.3f} \u00b1 {test_error.std():.3f}\")"
+    "      f\"{test_error.mean():.3f} ± {test_error.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "a76b739e",
    "metadata": {},
    "source": [
     "We observe that scaling data has a positive impact on the test score and that\n",
@@ -384,6 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8d61531d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,6 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6a480a37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,6 +434,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46a23576",
    "metadata": {},
    "source": [
     "Compare to the previous plots, we see that now all weight magnitudes are\n",
@@ -415,6 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5b8a0036",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,6 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7f9327a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,6 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "940d5492",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,6 +483,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "736d40a9",
    "metadata": {},
    "source": [
     "Looking specifically to weights values, we observe that increasing the value\n",
@@ -506,6 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8099b34d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,6 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cb148e47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,27 +573,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f3908f23",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_error = -cv_results[\"train_score\"]\n",
     "print(f\"Mean squared error of linear regression model on the train set:\\n\"\n",
-    "      f\"{train_error.mean():.3f} \u00b1 {train_error.std():.3f}\")"
+    "      f\"{train_error.mean():.3f} ± {train_error.std():.3f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d65579d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_error = -cv_results[\"test_score\"]\n",
     "print(f\"Mean squared error of linear regression model on the test set:\\n\"\n",
-    "      f\"{test_error.mean():.3f} \u00b1 {test_error.std():.3f}\")"
+    "      f\"{test_error.mean():.3f} ± {test_error.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "4cb31888",
    "metadata": {},
    "source": [
     "By optimizing `alpha`, we see that the training and testing scores are close.\n",
@@ -571,6 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b79b3473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,6 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e5d7a3fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,6 +641,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16548bc6",
    "metadata": {},
    "source": [
     "As we can see, regularization is just like salt in cooking: one must balance\n",
@@ -608,6 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e4d6771a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,6 +662,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cdd4ac2f",
    "metadata": {},
    "source": [
     "The optimal regularization strength is not necessarily the same on all\n",
@@ -629,6 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ea33bcde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,6 +685,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "610b89e2",
    "metadata": {},
    "source": [
     "This range can be reduced by decreasing the spacing between the grid of\n",
@@ -653,8 +701,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
