--- a/notebooks/parameter_tuning_nested.ipynb
+++ b/notebooks/parameter_tuning_nested.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f86afc28",
    "metadata": {},
    "source": [
     "# Evaluation and hyperparameter tuning\n",
@@ -28,6 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d6c1d57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d300e7d6",
    "metadata": {},
    "source": [
     "## Our predictive model\n",
@@ -52,6 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5a138bc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1fd36cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +102,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "71b144b0",
    "metadata": {},
    "source": [
     "## Evaluation\n",
@@ -115,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e21abf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +134,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8ec7f41",
    "metadata": {},
    "source": [
     "The cross-validation scores are coming from a 5-fold cross-validation. So\n",
@@ -136,17 +144,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "84e0e2f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "print(\n",
     "    \"Generalization score without hyperparameters tuning:\\n\"\n",
-    "    f\"{cv_results['test_score'].mean():.3f} \u00b1 {cv_results['test_score'].std():.3f}\"\n",
+    "    f\"{cv_results['test_score'].mean():.3f} ± {cv_results['test_score'].std():.3f}\"\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7e9747b2",
    "metadata": {},
    "source": [
     "We now present how to evaluate the model with hyperparameter tuning,\n",
@@ -165,6 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d9e4a04d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +193,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1094ca05",
    "metadata": {},
    "source": [
     "As previously seen, when calling the `fit` method, the model embedded in the\n",
@@ -193,6 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6fc304cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7a53b135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +231,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "202ebff6",
    "metadata": {},
    "source": [
     "One important caveat here concerns the evaluation of the generalization\n",
@@ -229,7 +244,7 @@
     "the different models trained internally during the cross-validation of the\n",
     "grid-search.\n",
     "\n",
-    "We therefore used knowledge from the full dataset to both decide our model\u2019s\n",
+    "We therefore used knowledge from the full dataset to both decide our model’s\n",
     "hyper-parameters and to train the refitted model.\n",
     "\n",
     "Because of the above, one must keep an external, held-out test set for the\n",
@@ -240,6 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03069a90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,6 +272,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b528c0aa",
    "metadata": {},
    "source": [
     "The score measure on the final test set is almost within the range of the\n",
@@ -310,6 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "077adba2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,6 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "321992ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,12 +347,13 @@
     "cv_test_scores = cv_results['test_score']\n",
     "print(\n",
     "    \"Generalization score with hyperparameters tuning:\\n\"\n",
-    "    f\"{cv_test_scores.mean():.3f} \u00b1 {cv_test_scores.std():.3f}\"\n",
+    "    f\"{cv_test_scores.mean():.3f} ± {cv_test_scores.std():.3f}\"\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "2803c8ec",
    "metadata": {},
    "source": [
     "This result is compatible with the test score measured with the string outer\n",
@@ -372,6 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aeaad7af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,6 +405,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23777e8b",
    "metadata": {},
    "source": [
     "It is interesting to see whether the hyper-parameter tuning procedure always\n",
@@ -415,8 +437,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
