--- a/notebooks/trees_hyperparameters.ipynb
+++ b/notebooks/trees_hyperparameters.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "48c30a3e",
    "metadata": {},
    "source": [
     "# Importance of decision tree hyperparameters on generalization\n",
@@ -16,6 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e75d4aa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "687ea11e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "528afa83",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -50,6 +54,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "379fc69b",
    "metadata": {},
    "source": [
     "## Create helper functions\n",
@@ -61,6 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c8238da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +106,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4eb03e72",
    "metadata": {},
    "source": [
     "## Effect of the `max_depth` parameter\n",
@@ -116,6 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8ce242eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "24f33666",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ba8edc24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,6 +160,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9698eac9",
    "metadata": {},
    "source": [
     "Now, let's increase the `max_depth` parameter value to check the difference\n",
@@ -159,6 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bdb75b93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff9643a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b0a84a7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +205,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9096b79",
    "metadata": {},
    "source": [
     "For both classification and regression setting, we observe that\n",
@@ -204,6 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f75f5bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "32030d5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2edf5610",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,6 +258,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce880d9e",
    "metadata": {},
    "source": [
     "With this example, we see that there is not a single value that is optimal\n",
@@ -265,6 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2da36dc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,6 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eb1f35d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,6 +322,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7fcb88e2",
    "metadata": {},
    "source": [
     "We will first train a shallow decision tree with `max_depth=2`. We would\n",
@@ -311,6 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "59b15ef6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,6 +346,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f60b8652",
    "metadata": {},
    "source": [
     "As expected, we see that the blue blob on the right and the red blob on the\n",
@@ -338,6 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "568552cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,6 +374,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ef3bada",
    "metadata": {},
    "source": [
     "We see that the right branch achieves perfect classification. Now, we\n",
@@ -358,6 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a85d88c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,6 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6b575a62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,6 +408,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b1baa32",
    "metadata": {},
    "source": [
     "As expected, the left branch of the tree continue to grow while no further\n",
@@ -396,6 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "211c88e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,6 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b2ae08b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,6 +450,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cbc0461c",
    "metadata": {},
    "source": [
     "This hyperparameter allows to have leaves with a minimum number of samples\n",
@@ -433,8 +465,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
